--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.9-SNAPSHOT'
+	id 'org.openapi.generator' version '7.8.0'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id "io.freefair.lombok" version "8.10.2"
 }
 
 group = 'com.example'
