--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.9-SNAPSHOT'
+	id 'org.springframework.boot' version '3.3.8'
 	id 'org.openapi.generator' version '7.8.0'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id "io.freefair.lombok" version "8.10.2"
@@ -38,6 +38,19 @@ dependencies {
 	testImplementation 'org.springframework.graphql:spring-graphql-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
+
+openApiGenerate {
+	generatorName = "spring" // 使用するジェネレーター（例: Spring Boot 用コード生成）
+	inputSpec = "$rootDir/src/main/resources/api/openapi.yaml" // OpenAPI 仕様のファイルパス
+	outputDir = "$rootDir/generated" // 生成コードの出力先
+	apiPackage = "com.example.api" // API インターフェースのパッケージ名
+	modelPackage = "com.example.model" // モデルクラスのパッケージ名
+	invokerPackage = "com.example.invoker" // ヘルパークラスのパッケージ名
+	configOptions = [
+			dateLibrary: "java8" // 日付/時刻ライブラリの選択 (例: java8)
+	]
+}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
