--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
+		languageVersion = JavaLanguageVersion.of(23)
 	}
 }
 
@@ -42,15 +42,15 @@ dependencies {
 openApiGenerate {
 	generatorName = "spring" // 使用するジェネレーター（例: Spring Boot 用コード生成）
 	inputSpec = "$rootDir/openapi/query.yaml" // OpenAPI 仕様のファイルパス
-	outputDir = "$rootDir/build" // 生成コードの出力先
-
-//	inputSpec = "$rootDir/src/main/resources/api/query.common-tasks.yaml" // OpenAPI 仕様のファイルパス
-//	outputDir = "$rootDir/generated" // 生成コードの出力先
-	apiPackage = "com.example.api" // API インターフェースのパッケージ名
+//	outputDir = "$rootDir/openapi/common/presentation" // 出力先を修正
+	outputDir = "$rootDir/query/common/openapi" // 出力先を修正
+	apiPackage = "com.anv.query.common.presentation.openapi.generated.controller" // API インターフェースのパッケージ名
 	modelPackage = "com.example.model" // モデルクラスのパッケージ名
-	invokerPackage = "com.example.invoker" // ヘルパークラスのパッケージ名
 	configOptions = [
-			dateLibrary: "java8" // 日付/時刻ライブラリの選択 (例: java8)
+			dateLibrary: "java8",
+			generateApis: "false",  // これでAPIコードの生成を無効にする
+			generateModelTests: "false", // モデルテストも無効にする
+			generateApiTests: "false"   // APIテストも無効にする
 	]
 }
 
