--- a/build.gradle
+++ b/build.gradle
@@ -38,22 +38,31 @@ dependencies {
 	testImplementation 'org.springframework.graphql:spring-graphql-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
+def commonSpringAdditionalProperties = [
+		java17                 : "true",
+		useSpringBoot3         : "true",
+		interfaceOnly          : "true",
+		openApiNullable        : "false",
+		useOptional            : "true",
+		hideGenerationTimestamp: "true",
+		serializableModel      : "true",
+		useJakartaEe           : "true",
+		requestMappingMode     : "api_interface",
+		generatedConstructorWithRequiredArgs: "false",
+		removeEnumValuePrefix  : "false",
+		additionalModelTypeAnnotations : ";@lombok.NoArgsConstructor;@lombok.AllArgsConstructor;",
+		sourceFolder           : ".", // ← `src/main/java` を自動追加しない
+]
 
 openApiGenerate {
-	generatorName = "spring" // 使用するジェネレーター（例: Spring Boot 用コード生成）
-	inputSpec = "$rootDir/openapi/query.yaml" // OpenAPI 仕様のファイルパス
-//	outputDir = "$rootDir/openapi/common/presentation" // 出力先を修正
-	outputDir = "$rootDir/query/common/openapi" // 出力先を修正
-	apiPackage = "com.anv.query.common.presentation.openapi.generated.controller" // API インターフェースのパッケージ名
-	modelPackage = "com.example.model" // モデルクラスのパッケージ名
-	configOptions = [
-			dateLibrary: "java8",
-			generateApis: "false",  // これでAPIコードの生成を無効にする
-			generateModelTests: "false", // モデルテストも無効にする
-			generateApiTests: "false"   // APIテストも無効にする
-	]
-}
+	generatorName = "spring"
+	inputSpec = "$rootDir/openapi/query.yaml"
+	outputDir = "$rootDir/query/common/openapi"
 
+	apiPackage = "com.spr.query.common.presentation.openapi.generated.controller"
+	modelPackage = "com.spr.query.common.presentation.openapi.generated.model"
+	configOptions = commonSpringAdditionalProperties
+}
 
 tasks.named('test') {
 	useJUnitPlatform()
