--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,18 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.8'
+	id 'org.springframework.boot' version '3.3.4'
 	id 'org.openapi.generator' version '7.8.0'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id "io.freefair.lombok" version "8.10.2"
 }
 
-group = 'com.example'
+group = 'com.spr'
 version = '0.0.1-SNAPSHOT'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(23)
+		languageVersion = JavaLanguageVersion.of(21)
+		targetCompatibility = JavaLanguageVersion.of(21)
 	}
 }
 
@@ -30,6 +31,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
+	implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+	implementation 'io.swagger.core.v3:swagger-annotations:2.2.22'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -37,6 +40,7 @@ dependencies {
 	testImplementation 'org.springframework:spring-webflux'
 	testImplementation 'org.springframework.graphql:spring-graphql-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 }
 def commonSpringAdditionalProperties = [
 		java17                 : "true",
@@ -57,12 +61,10 @@ def commonSpringAdditionalProperties = [
 openApiGenerate {
 	generatorName = "spring"
 	inputSpec = "$rootDir/openapi/query.yaml"
-	outputDir = "$rootDir/src"
+	outputDir = "$rootDir/src/main/java"
 
-	apiPackage = "/main/java/com/example/spr/presentation/generated/"
-
-//	apiPackage = "$rootDir/src/main/java/com/examle/spr/presentation/generated"
-//	modelPackage = "com.spr.query.common.presentation.openapi.src.main.java.generated.model"
+	apiPackage = 'com.spr.generated.controller'  // API層のパッケージ
+	modelPackage = 'com.spr.generated.model'  // ドメインモデル層のパッケージ
 	configOptions = commonSpringAdditionalProperties
 }
 
@@ -70,7 +72,7 @@ openApiGenerate {
 sourceSets {
 	main {
 		java {
-			srcDirs = ['src/main/java', '$rootDir/profiles/resources']
+			srcDirs = ['src'] // src をソースディレクトリとして指定
 		}
 	}
 }
