--- a/openapi/components/paths/common-tasks.yaml
+++ b/openapi/components/paths/common-tasks.yaml
@@ -4,6 +4,15 @@ get:
     タスク一覧を取得するAPI
   tags:
     - common/tasks
+  parameters:
+    - in: query
+      name: goods_id_list
+      description: タスクリスト
+      required: true
+      style: form
+      explode: false
+      schema:
+        $ref: '../parameters/task_id_list.yaml'
   responses:
     200:
       description: 200 (OK)
@@ -11,9 +20,9 @@ get:
         application/json:
           examples:
             複数のタスクをレスポンスする:
-              $ref: '../examples/get-common-tasks.yaml'
+              $ref: '../examples/get-common-tasks-response.yaml'
           schema:
-            $ref: '../responses/get-common-tasks.yaml'
+            $ref: '../responses/get-common-tasks-response.yaml'
     400:
       description: 400 (Bad Request)
       content:
