--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
+
 	implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'io.swagger.core.v3:swagger-annotations:2.2.22'
@@ -67,10 +67,10 @@ def commonSpringAdditionalProperties = [
 openApiGenerate {
 	generatorName = "spring"
 	inputSpec = "$rootDir/openapi/query.yaml"
-	outputDir = "$rootDir/src/"
+	outputDir = "$rootDir/src/main/java"
 
-	apiPackage = 'main.java.com.spr.generated.controller'  // API層のパッケージ
-	modelPackage = 'main.java.com.spr.generated.model'  // ドメインモデル層のパッケージ
+	apiPackage = 'com.spr.presentation'  // API層のパッケージ
+	modelPackage = 'com.spr.generated.model'  // ドメインモデル層のパッケージ
 	configOptions = commonSpringAdditionalProperties
 }
 
@@ -78,7 +78,7 @@ openApiGenerate {
 sourceSets {
 	main {
 		java {
-			srcDirs = ['src'] // src をソースディレクトリとして指定
+			srcDirs = ['src/main/java']
 		}
 	}
 }
