--- a/src/main/java/com/spr/resources/application.yaml
+++ b/src/main/java/com/spr/resources/application.yaml
@@ -12,6 +12,8 @@ spring:
 
 mybatis:
   mapper-locations: classpath:/mybatis/mapper/*.xml
+  type-aliases-package: com.spr.application.dto
+
 
 logging:
   level:
