--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ spring:
       enabled: false
 
 mybatis:
-  mapper-locations: classpath:/mybatis/mapper/*.xml
+  mapper-locations: classpath:/com/spr/infrastructure/mapper/*.xml
   type-aliases-package: com.spr.application.dto
 
 
